[project]
name = "lesson"
version = "0.0.1"
authors = [
  { name="Tony De Corso", email="tony.dcorso@gmail.com" },
]
description = "Lesson: note what you learn and use it later."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }

[project.urls]
Homepage = "https://github.com/tonziu/lesson"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
